# OOP_my

lr1/untitled/: CMakeLists.txt  main.cpp
lr1/untitled/Field/: Field.cpp  Field.h
lr1/untitled/Units/: ObjectInterface.h  Unit.cpp  Unit.h
lr1/untitled/Units/Artillerist/: Artillerist.cpp
lr1/untitled/Units/Cavalryman/: Cavalryman.cpp  ElfOnUnicorn.cpp
lr1/untitled/Units/Infantryman/: Gnome.cpp  Infantryman.h
lr2/: CMakeLists.txt  main.cpp
lr2/Base/: Base.cpp  Base.h
lr2/Field/: Field.cpp  Field.h
lr2/Game/: Game.cpp  Game.h
lr2/Landscape/: Abyss.cpp  Abyss.h  Glade.h  Landscape.cpp  ProxyLandscape.h  Swamp.cpp
lr2/NeutralObject/: Client.h  MedicalKit.cpp  PowerPotion.cpp
lr2/Units/: ObjectInterface.h  Unit.cpp  Unit.h
lr2/Units/Artillerist/: Archer.cpp  Archer.h  Artillerist.h  Magician.cpp  Magician.h
lr2/Units/Cavalryman/: Cavalryman.h  ElfOnUnicorn.cpp  ElfOnUnicorn.h  KnightOnHorse.cpp  KnightOnHorse.h
lr2/Units/Infantryman/: Gnome.cpp  Gnome.h  Infantryman.cpp  Knight.cpp  Knight.h
oop_for_stepik/: main.cpp
oop_for_stepik/Color/: Color.h
oop_for_stepik/Point/: Point.cpp  Point.h
oop_for_stepik/Shapes/Ellipse/: Ellipse.cpp  Ellipse.h
oop_for_stepik/Shapes/Rectangle/: Rectangle.cpp
oop_for_stepik/Shapes/SectorEllipse/: SectorEllipse.cpp  SectorEllipse.h
untitled3/: CMakeLists.txt
untitled3/Color/: Color.cpp
untitled3/Shapes/: Shape.h
untitled3/Shapes/Rectangle/: Rectangle.h
